// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initializeOutboundSmsForMessagingSaga should call the promise util with the SDK initializeOutboundSms and the correct arguments 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        undefined,
        Object {
          "message": "message",
          "phoneNumber": "phoneNumber",
        },
        "MessagingContentArea",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`initializeOutboundSmsForMessagingSaga should dispatch a setInteractionStatus action to set to "initializing-outbound" 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "interactionId",
        "newStatus": "initializing-outbound",
        "response": undefined,
        "type": "app/AgentDesktop/SET_INTERACTION_STATUS",
      },
      "channel": null,
    },
  },
}
`;

exports[`initializeOutboundSmsForMessagingSaga should use the yielded SDK results to dispatch an initializeOutboundSms action with the correct args 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "newInteractionId",
        "message": "message",
        "placeholderInteractionId": "interactionId",
        "type": "app/AgentDesktop/INITIALIZE_OUTBOUND_SMS_FOR_AGENT_DESKTOP",
      },
      "channel": null,
    },
  },
}
`;

exports[`sendOutboundSms should call the promise util with the SDK sendOutboundSms and the correct arguments 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "CxEngage.interactions.messaging.sendOutboundSms",
        Object {
          "interactionId": "interactionId",
          "message": "message",
        },
        "MessagingContentArea",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`sendOutboundSms should use the yielded SDK results to dispatch a sendOutboundSms action with the correct args 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "interactionId": "interactionId",
        "message": Immutable.Record {
          "id": "no-id",
          "type": "agent",
          "from": "Agent",
          "text": "message",
          "timestamp": "1970-01-01T00:00:00.000Z",
        },
        "type": "app/AgentDesktop/ADD_MESSAGE",
      },
      "channel": null,
    },
  },
}
`;
